# creat_web_page

./: docker-compose.yaml  pyproject.toml
pbl2/: .env  package.json
pbl2/src/pages/: _app.tsx  botton.tsx  ex.tsx  ex1.tsx  ex2.tsx  index.tsx  page.tsx  page1.tsx
pbl2/src/provider/: SessionProvider.tsx
src/rye_pbl_python_tana/: database.py  main.py  models.py
