[project]
name = "rye-pbl-python-tana"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "sudo>=1.0.0",
    "fastapi>=0.111.0",
    "pgcli>=4.1.0",
    "psycopg[binary]>=3.1.19",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_pbl_python_tana"]
